# earthcube_utilities

./: .gitignore  404.html  Dockerfile  README.md  earthcube_utilities.py  index.html  mkdocs.yml  objects.inv  requirements.txt  setup.cfg
docs/: NOTE.txt  index.md
earthcube_utilities/: README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
earthcube_utilities/design/breakdown/: index.html
earthcube_utilities/design/ec_query/: index.html
earthcube_utilities/design/mini-base/: index.html
earthcube_utilities/design/rdf2triples/: index.html
earthcube_utilities/design/repository_reporting/: index.html
earthcube_utilities/design/ro_crate/: index.html
earthcube_utilities/design/sos_jsonld_utils/: index.html
earthcube_utilities/design/submodules/: index.html
earthcube_utilities/design/validate_distribution_links/: index.html
earthcube_utilities/design/validation_graph/: index.html
earthcube_utilities/design/validation_jsonld/: index.html
earthcube_utilities/design/validation_overall/: index.html
earthcube_utilities/design/validation_sitemap/: index.html
earthcube_utilities/design/validation_test_data/: index.html
earthcube_utilities/design/viz/: index.html
earthcube_utilities/docs/: NOTE.txt  breakdown.md  earthcube_utilities.md  earthcube_utilities_code.md  earthcube_utilities_graph_query_sparql.md  earthcube_utilities_scripts.md  earthcube_utilties_functionality.md  ec_query.md  index.md  rdf2triples.md  repository_reporting.md  ro_crate.md  sm.md  sos_jsonld_utils.md  validation_jsonld.md  validation_overall.md  validation_sitemap.md  validation_test_data.md  viz.md
earthcube_utilities/earthcube_utilities_code/: index.html
earthcube_utilities/earthcube_utilities_graph_query_sparql/: index.html
earthcube_utilities/earthcube_utilities_scripts/: index.html
earthcube_utilities/earthcube_utilties_functionality/: index.html
earthcube_utilities/ec/collection/: rocate_collection.py
earthcube_utilities/ec/graph/: sparqlquery.py
earthcube_utilities/ec/jsonrdf/: rdf.py
earthcube_utilities/ec/s3/: s3.py
earthcube_utilities/ec/sos_json/: rdf.py
earthcube_utilities/reporting/: index.html
earthcube_utilities/resources/: 0024e35144d902d8b413ffd400ede6a27efe2146_orig.jsonld  0024e35144d902d8b413ffd400ede6a27efe2146_triples.csv  0024e35144d902d8b413ffd400ede6a27efe2146_v2.jsonld  README.md  obis_depth_full.jsonld  summonediris_2023-03-13-11-02-47_release.nq
earthcube_utilities/resources/releases/: depth_test_release.nq  summonediris_https_fixed_release.nq
earthcube_utilities/resources/sparql/: NOTE.md  all_count_graphs_by_repo.txt  all_repo_count_datasets.sparql  all_repo_count_graphs.sparql  all_repo_count_keywords.sparql  all_repo_versioned_datasets_count.txt  all_repo_with_keywords.txt  all_select_graphs.txt  all_versioned_datasets_count.txt
earthcube_utilities/resources/sqarql/: sbj2urn.txt  summary.txt
earthcube_utilities/resources/summarize/: iedadata_release_short.nq  iris_release.nq  nabu
earthcube_utilities/resources/testing/: gleaner  summarydf_short.csv
earthcube_utilities/scripts/: generateRepoStats.py
earthcube_utilities/setup_testing/: index.html
earthcube_utilities/sqarql_notes/: index.html
earthcube_utilities/src/ec/: breakdown.md  bucketutil.py  check_sitemap.py  earthcube_utilities.py  ec_reports.py  generate_graph_stats.py  generate_repo_stats.py  mb.py  missing_report.py  query.py  query_graph.py  rdf2nq.py  readme.md  shacl.ipynb  shacl_simple.ipynb  shape.ttl  sm.md  summarize_from_release.py  summarize_identifier_metadata.py  transform_sitemap.py  write_missing_report.py
earthcube_utilities/summarize/: index.html
earthcube_utilities/tests/: collection_rocrate_test.py  ec_reports_test.py  gleaner_test.py  json_schema_test.py  managegraph_test.py  notebook_test.py  rdf_test.py  release_graph_test.py  reporting_test.py  rocrate_test.py  s3_test.py  sitemap_test.py  sparqlquery_test.py  summarize_materializedview_test.py
earthcube_utilities/tests/approved_files/: Graph_SparqlDataframe_TestCase.test_listile.approved.txt  RDFTestCase.test_compactJsonld.approved.txt  RDFTestCase.test_dfnt.approved.txt  RDFTestCase.test_dupe_at_id_Jsonld.approved.txt  RDFTestCase.test_formatted_framedJsonld.approved.txt  RDFTestCase.test_relative_at_if_Jsonld.approved.txt  ReelaseTestCase.test_query_release_datsetcount.approved.txt  ReelaseTestCase.test_summarize.approved.txt  ReportingTestCase.test_compareSitemap2Summoned.approved.txt  ReportingTestCase.test_compareSummoned2Graph.approved.txt  ReportingTestCase.test_missingReport.approved.txt  SummarizeMaterializedViewTestCase.test_summaryAsQuads.approved.txt  SummarizeMaterializedViewTestCase.test_summaryDF2quad.approved.txt  SummarizeMaterializedViewTestCase.test_summaryDF2ttl.approved.txt
notebook_proxy/: README.md  index.html  mkdocs.yml  mknb.py  pyproject.toml  pyproject.toml_  requirements.txt  setup.cfg  uwsgi.ini
notebook_proxy/resources/: summarydf_short.csv
notebook_proxy/templates/: binder_sparql.ipynb  sparql.ipynb  template.ipynb
summarize/: README.md  code_review_summarize_2023_02.md  fix_runX.sh  mkdocs.yml  pyproject.toml  repo2summary.sh  requirements.txt  setup.cfg  summarize_repo.sh  ttl2blaze.sh  v2_proposal.md
summarize/docs/: NOTE.txt  call-rg.md  call.md  index.md  summarize_code.md
summarize/docs/js/: loader.js
summarize/outdated/call/: index.html
summarize/outdated/call-1st/: index.html
summarize/outdated/call-rg/: index.html
summarize/outdated/summarize/: index.html
summarize/outdated/v2_proposal/: index.html
summarize/src/: call-1st.md  call.md  earthcube_utilities.py  fix_runX.sh  fnq.py  get_repo.py  get_repo_release_graph.py  get_repos_release_nquads.py  materialize_summary.py  nabu_wifire  note.txt  qry.py  rdf2nq.py  readme.md  repo2summary.sh  run2nq.py  summarize_from_graph_namespace.py  summarize_from_release.py  summarize_materializedview.py  summarize_materializedview_test.py  summarize_repo.py  summarize_repo.sh  summarize_repo_test.py  tsum.py  ttl2blaze.sh  wifire.ttl
(+125 files in other folders)
