[metadata]
name = earthcube_notebook_proxy
version = 0.10
author = Mike Bobak
author_email = mbobak@illinois.edu
maintainer = David Valentine
maintainer_email = dwvalentine@ucsd.edu
description = A proxy  to create notebooks for the for the Earthcube Geocodes Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/earthcube/earthcube_utilities/src/notebook_proxy
project_urls =
    Bug Tracker = https://github.com/earthcube/earthcube_utilities/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =.
packages = find:
python_requires = >=3.8

[options.packages.find]
where=.
