[metadata]
name = earthcube_utility_summarize
version = 0.1.1
author = Mike Bobak
author_email = mbobak@illinois.edu
description = A package to summarize a graph to create a 'materialize view' to improve search performance for NSF Earthcube Project Geocodes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/earthcube/earthcube_utilities
project_urls =
    Bug Tracker = https://github.com/earthcube/earthcube_utilities/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src
